--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,66 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_localizations: # <--- ЭТО ВАЖНО!
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+   # UI и Иконки
   cupertino_icons: ^1.0.8
+  font_awesome_flutter: ^10.7.0
+  google_fonts: ^6.2.1
+  
+  # Логика и Утилиты
+  intl: ^0.20.2
+  uuid: ^4.4.0
+  collection: ^1.18.0
+
+  # Хранение данных
+  shared_preferences: ^2.2.3
+  path_provider: ^2.1.3
+
+  # Графики
+  fl_chart: ^0.68.0 # <-- Обновлено
+
+  # Управление состоянием
+  provider: ^6.1.2
+
+  # Плагины
+  archive: ^3.6.1 # <-- Обновлено
+  file_picker: ^8.0.3 # <-- ГЛАВНОЕ ИСПРАВЛЕНИЕ
+  flutter_iconpicker: ^3.6.6
+
+  home_widget: ^0.7.0
+
+  mobile_scanner: ^5.2.0
+  geolocator: ^12.0.0
+  http: ^1.6.0
+  flutter_dotenv: ^5.1.0
+
+  hive: ^2.2.3          # <--- ДОБАВИТЬ
+  hive_flutter: ^1.1.0  # <--- ДОБАВИТЬ
+  flutter_local_notifications: ^17.0.0  # <--- ДОБАВИТЬ
+  timezone: ^0.9.2                      # <--- ДОБАВИТЬ
+  flutter_timezone: ^3.0.0
+
+  reorderable_grid_view: ^2.2.5  # <--- ДОБАВЬТЕ ЭТО
+
+  # Переход в карты
+  url_launcher: ^6.3.2
+
+  math_expressions: ^2.4.0
+  html: ^0.15.6
+  permission_handler: ^12.0.1
+  media_scanner: ^2.2.0
+  image_picker: ^1.2.1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -45,12 +98,24 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.13.1
+  build_runner: ^2.4.6   # <--- ДОБАВИТЬ (Запускатор генератора)
+  hive_generator: ^2.0.1 # <--- ДОБАВИТЬ (Генератор адаптеров)
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+
+flutter_launcher_icons:
+  android: true # Включить для Android
+  image_path: "assets/icon/icon.png" # Путь к вашей иконке
+
+  # --- Специальные настройки для Android (для современного вида) ---
+  adaptive_icon_background: "#0F111A" # Цвет фона иконки, берем из вашей темы AppTheme
+  adaptive_icon_foreground: "assets/icon/icon_foreground.png" # Картинка для переднего плана
 # The following section is specific to Flutter packages.
 flutter:
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -58,7 +123,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
