--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
 
   # Хранение данных
   shared_preferences: ^2.2.3
-  path_provider: ^2.1.3
+  path_provider: ^2.1.5
 
   # Графики
   fl_chart: ^0.68.0 # <-- Обновлено
@@ -69,8 +69,6 @@ dependencies:
   http: ^1.6.0
   flutter_dotenv: ^5.1.0
 
-  hive: ^2.2.3          # <--- ДОБАВИТЬ
-  hive_flutter: ^1.1.0  # <--- ДОБАВИТЬ
   flutter_local_notifications: ^17.0.0  # <--- ДОБАВИТЬ
   timezone: ^0.9.2                      # <--- ДОБАВИТЬ
   flutter_timezone: ^3.0.0
@@ -85,6 +83,10 @@ dependencies:
   permission_handler: ^12.0.1
   media_scanner: ^2.2.0
   image_picker: ^1.2.1
+  drift: ^2.30.1
+  drift_dev: ^2.20.0
+  sqlite3_flutter_libs: ^0.5.41
+  path: ^1.9.1
 
 
 
@@ -99,8 +101,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.13.1
-  build_runner: ^2.4.6   # <--- ДОБАВИТЬ (Запускатор генератора)
-  hive_generator: ^2.0.1 # <--- ДОБАВИТЬ (Генератор адаптеров)
+  build_runner: ^2.4.13   # <--- ДОБАВИТЬ (Запускатор генератора)
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
