chore: обновил .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,7 @@ macos/Flutter/ephemeral/
 # Если будешь использовать drift/freezed, они генерируют эти файлы.
 # Можно оставить закомментированным, чтобы видеть их в гите,
 # или раскомментировать, чтобы не засорять коммиты.
-.g.dart
+*.g.dart
 # *.freezed.dart
 
 
